# co-force

./: AGENTS.md  Cargo.toml  README.md  test-co-force.db-shm  test-co-force.db-wal
crates/co-force-core/: Cargo.toml
crates/co-force-core/src/: lib.rs
crates/co-force-core/src/db/: activity_repo.rs  agent_repo.rs  context_repo.rs  handover_repo.rs  helpers.rs  lock_repo.rs  mod.rs  server_db.rs  task_repo.rs
crates/co-force-core/src/db/migrations/: 001_initial.sql  002_handover.sql  003_quality.sql
crates/co-force-core/src/engine/: check_in.rs  get_agent_context.rs  handover.rs  lock_files.rs  mod.rs  ports.rs  share_context.rs  spawn.rs  tasks.rs
crates/co-force-core/src/llm/: chunker.rs  memory.rs  mod.rs  ollama.rs  skills.rs  vector_search.rs
crates/co-force-core/src/orchestration/: bus.rs  doc_generator.rs  mod.rs  process_mgr.rs  providers.rs  reclaim.rs  rules.rs
crates/co-force-core/src/quality/: messaging.rs  mod.rs  review.rs  state_machine.rs
crates/co-force-core/src/types/: enums.rs  ids.rs  mod.rs  structs.rs
crates/co-force-mcp/: Cargo.toml
crates/co-force-mcp/src/: main.rs
docs/: README.md  SRS.md  URD.md  a2a_production_blueprint.md  antigravity_cli_a2a_research.md  architecture.md  implementation_instructions.md  progress.md  review_findings.md  system_architecture.md
docs/plans/: 00_roadmap.md  01_database_and_domain.md  02_mcp_server_and_use_cases.md  03_active_a2a_orchestration.md  04_agentic_rag_and_llm.md  05_setup_ux_and_onboarding.md  06_server_deployment_and_tunnel.md  07_quality_engine_and_a2a.md  08_provider_cli_integration.md  09_agent_operating_protocol.md  10_solo_orchestration.md
