[workspace]
resolver = "2"
members = [
    "crates/co-force-core",
    "crates/co-force-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hiimtrung/co-force"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for Ollama)
reqwest = { version = "0.12", features = ["json"] }

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
hostname = "0.4"
sha2 = "0.10"
